
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

syntax = "proto3";

package cfg;

enum ItemEQuality {
    ItemEQuality_EMPTY_PLACEHOLDER = 0;
    ItemEQuality_WHITE = 1;
    ItemEQuality_BLUE = 2;
    ItemEQuality_PURPLE = 3;
    ItemEQuality_RED = 4;
}
enum TestAccessFlag {
    TestAccessFlag_EMPTY_PLACEHOLDER = 0;
    TestAccessFlag_WRITE = 1;
    TestAccessFlag_READ = 2;
    TestAccessFlag_TRUNCATE = 4;
    TestAccessFlag_NEW = 8;
    TestAccessFlag_READ_WRITE = 3;
}

message vector2 {
     float x = 1 ;
     float y = 2 ;
}
message vector3 {
     float x = 1 ;
     float y = 2 ;
     float z = 3 ;
}
message vector4 {
     float x = 1 ;
     float y = 2 ;
     float z = 3 ;
     float w = 4 ;
}
message ItemItemExchange {
     int32 id = 1 ;
     int32 num = 2 ;
}
message TestTestExcelBean1 {
     int32 x1 = 1 ;
     string x2 = 2 ;
     int32 x3 = 3 ;
     float x4 = 4 ;
}
message TestTestExcelBean2 {
     int32 y1 = 1 ;
     string y2 = 2 ;
     float y3 = 3 ;
}
message TestShape {
    oneof value {
        TestCircle Circle = 1;
        TestRectangle Rectangle = 2;
    }
}
message TestCircle {
     float radius = 1 ;
}
message TestRectangle {
     float width = 1 ;
     float height = 2 ;
}
message CollisionConfig {
     int32 worldSize = 1 ;
     int32 minNodeSize = 2 ;
     int32 loosenessval = 3 ;
}
message Item {
     int32 id = 1 ;
     string name = 2 ;
     string desc = 3 ;
     int32 price = 4 ;
     int32 upgrade_to_item_id = 5 ;
    optional int64 expire_time = 6 ;
     bool batch_useable = 7 ;
     ItemEQuality quality = 8 ;
     ItemItemExchange exchange_stream = 9 ;
    repeated ItemItemExchange exchange_list = 10 [packed = false];
     ItemItemExchange exchange_column = 11 ;
}

message ItemTbItem {
    repeated Item data_list = 1 [packed = false];
}
message CollisionCfgs {
    repeated CollisionConfig data_list = 1 [packed = false];
}


